# better_minig

./: .WORKSPACE.swp  .bazelrc  BUILD  README.md  WORKSPACE  registries.yaml
cc/examples/routeguide/: BUILD.bazel  helper.cc
cc/examples/routeguide/client/: BUILD  client.cc  client.jsonnet
cc/examples/routeguide/server/: BUILD  server.cc  server.jsonnet
cc/helloworld/client/: BUILD  client.jsonnet  job.jsonnet  main.cc  simple.cc  simple.h
cc/helloworld/server/: BUILD  kube-service.jsonnet  main.cc  server.jsonnet
examples/hellogrpc/py/client/: BUILD
examples/hellogrpc/py/server/: BUILD
go/examples/routeguide/client/: BUILD.bazel  broken.BUILD.bazel  client.jsonnet  main.go
go/examples/routeguide/server/: BUILD.bazel  main.go  server.jsonnet
go/helloworld/client/: BUILD  client.jsonnet  job.jsonnet  main.go
go/helloworld/server/: BUILD  main.go  server.jsonnet
go/redis/: BUILD  BUILD.bazel
java/com/example/hellogrpc/server/: BUILD  HelloServer.java
java/com/examples/flags/: BUILD  Server.java  ServerOptions.java
java/com/examples/grpc_redis/: BUILD  BUILD.bazel  HelloServer.java  RouteGuideUtil.java  server.jsonnet
java/com/examples/grpc_redis/client/: BUILD  RouteGuideClient.java  client.jsonnet
java/com/examples/grpc_redis/server/: BUILD  RouteGuideServer.java  server.jsonnet
java/com/examples/gson/: BUILD  Cart.java  GsonExample.java  LineItem.java  Main.java
java/com/examples/guava/: .BUILD.swp  BUILD  Library.java
java/com/examples/helloworld/client/: .job..swp  BUILD  HelloClient.java  client.jsonnet  job.jsonnet  job.yaml
java/com/examples/helloworld/server/: .BUILD.swp  .server.jsonnet.swp  BUILD  HelloServer.java  deployment.jsonnet  kube-service.jsonnet  server.jsonnet  service.jsonnet
java/com/examples/redis/: BUILD  JedisExample.java  MyRedis.java  RedissonExample.java  dump.rdb
java/com/examples/routeguide/: BUILD.bazel  RouteGuideUtil.java
java/com/examples/routeguide/client/: BUILD  RouteGuideClient.java  client.jsonnet
java/com/examples/routeguide/server/: BUILD  RouteGuideServer.java  server.jsonnet
java/com/healthchecking/: BUILD  HealthService.java
javatests/com/examples/redis/: TestMyRedis.java
jsonnet/: BUILD  redis.libsonnet  service.jsonnet  utils.libsonnet  yaml_to_json.bzl
jt/com/examples/redis/: BUILD
nodejs/helloworld/: package.json
nodejs/helloworld/server/: BUILD  server.js
prod/: BUILD  BUILD.yaml-extraction  busybox.yaml  cluster_consts.bzl  container.libsonnet  deployment.libsonnet  dummy.jsonnet  env_wrapper.jsonnet  environments.jsonnet  envs.libsonnet  mirror-cert.json  namespaces.jsonnet  registry.jsonnet  service.libsonnet
prod/cicd/spinnaker/: BUILD  init.yaml  namespace.json  old_spinnaker.jsonnet  operator-namespace.json  spinnaker.jsonnet
prod/hellogrpc/: BUILD  service.yaml
prod/monitoring/: BUILD  main.jsonnet  setup.jsonnet
prod/redis/: BUILD  BUILD.bazel  main.go  main_test.go  redis.bzl  redis.jsonnet
prod/storage/: BUILD  local-path-storage.yaml
prod/storage/minio/: BUILD  minio.yaml
proto/: BUILD  health.proto
proto/examples/helloworld/: BUILD
proto/examples/routeguide/: BUILD  routeguide.proto
proto/hellogrpc/: simple.proto
proto/helloworld/: BUILD  simple.proto
py/: requirements.txt
py/examples/hellogrpc/client/: BUILD  client.jsonnet  client.py  job.jsonnet
py/examples/hellogrpc/server/: BUILD  kube-service.jsonnet  server.jsonnet  server.py
py/examples/routeguide/: BUILD.bazel  resources.py
py/examples/routeguide/client/: BUILD  client.jsonnet  client.py
py/examples/routeguide/server/: BUILD  server.jsonnet  server.py
rules/: cluster_consts.bzl  envs.bzl  file_manipulation.bzl
tests/helloworld/: BUILD  process.go  silly.go
