package(default_visibility = ["//visibility:public"])

load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")

cpp_grpc_library(
    name = "routeguide",
    deps = ["//proto/examples/routeguide:routeguide_proto"],
)

cc_library(
    name = "helper",
    srcs = ["helper.cc"],
    hdrs = ["helper.h"],
    deps = [":routeguide"],
)
